--- a/activitytest/src/main/AndroidManifest.xml
+++ b/activitytest/src/main/AndroidManifest.xml
@@ -4,7 +4,14 @@
     <application android:allowBackup="true" android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher" android:supportsRtl="true"
         android:theme="@style/AppTheme">
+<activity android:name=".first_activity"
+    android:label="this is a acitivity test">
+    <intent-filter>
+        <action android:name="android.intent.action.main"></action>
+        <category android:name="android.intent.category.LAUNCHER"></category>
+    </intent-filter>
 
+</activity>
     </application>
 
 </manifest>
