--- a/broadcastbestpractice/src/main/AndroidManifest.xml
+++ b/broadcastbestpractice/src/main/AndroidManifest.xml
@@ -1,20 +1,26 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jerometian.broadcastbestpractice">
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-<activity android:name=".LoginActivity"
-    android:label="@string/app_name"
-        android:theme="@style/AppTheme.NoActionBar" >
-    <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-        <category android:name="android.intent.category.LAUNCHER"/>
-    </intent-filter>
-</activity>
+        android:supportsRtl="true">
+        <activity android:name=".LoginActivity"
+            android:label="@string/app_name"
+                android:theme="@style/AppTheme.NoActionBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".MainActivity" android:theme="@style/AppTheme.NoActionBar" />
+        <receiver android:name=".ForceOfflineReceiver">
+            <intent-filter>
+                <action android:name="com.example.jerometian.broadcastbestpractice.FORCE_OFFLINE" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
