--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':activitytest', ':activitylifecycletest', ':uiwidgettest', ':listviewtest', ':compatv7example', ':broadcasttest', ':broadcasttest2', ':broadcastbestpractice', ':contactstest'
+include ':broadcastbestpractice', ':contactstest', ':activitylifecycletest', ':activitytest', ':app'
