--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':broadcastbestpractice', ':contactstest', ':activitylifecycletest', ':activitytest', ':app', ':notificationtest', ':androidthreadtest'
+include ':broadcastbestpractice', ':contactstest', ':activitylifecycletest', ':activitytest', ':app', ':notificationtest', ':androidthreadtest', ':servicebestpractice', ':webviewtest'
