--- a/networktest/build.gradle
+++ b/networktest/build.gradle
@@ -1,10 +1,11 @@
 apply plugin: 'com.android.application'
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.example.jerometian.webviewtest"
+        applicationId "com.example.jerometian.networktest"
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
@@ -16,8 +17,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-
 }
 
 dependencies {
