--- a/View.Web/JsonWebSite/JsonWebSite/JsonWebSite.csproj
+++ b/View.Web/JsonWebSite/JsonWebSite/JsonWebSite.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="GetJson.cs" />
     <Compile Include="Models\Book.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -79,6 +80,8 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="getjson.json" />
+    <None Include="Properties\PublishProfiles\stardand.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
