--- a/coolweather/src/main/AndroidManifest.xml
+++ b/coolweather/src/main/AndroidManifest.xml
@@ -10,5 +10,6 @@
             <category android:name="android.intent.category.LAUNCHER"/>
         </intent-filter>
     </activity>
+        <activity android:name="com.example.jerometian.coolweather.activity.WeatherActivity"/>
     </application>
 </manifest>
